Atualizoções no método de busca da  estrutura
